cmake_minimum_required(VERSION 3.8)
project(dyros_cmake)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  find_package(rclcpp REQUIRED)
  find_package(std_msgs REQUIRED)
  
  include_directories(include)
  
  add_executable(dyros_cpp_pub src/dyros_cpp_pub.cpp)
  ament_target_dependencies(dyros_cpp_pub rclcpp std_msgs)
  add_executable(dyros_cpp_sub src/dyros_cpp_sub.cpp)
  ament_target_dependencies(dyros_cpp_sub rclcpp std_msgs)
  
  install(TARGETS
  	dyros_cpp_pub
  	dyros_cpp_sub
  	DESTINATION lib/${PROJECT_NAME}
  )
  
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
